CI Standards and general code cleanup in the system/core directory.
A couple of things to note:

- class variables should not be commented with PEAR-style doc-block comments.  The developer should be able to ascertain the variables visibility from reading the code (public/private/protected), and generally, they take up much more room than a standard (// my comment) type of comment.

- Altered some method names and provided aliases in the URI class.  Most of these methods are called in the router, but I think it is a good idear to be consistent in method naming conventions.

--- a/user_guide/changelog.html
+++ b/user_guide/changelog.html
@@ -101,6 +101,9 @@ Change Log
 	<li>Core
 		<ul>
 			<li class="reactor">Changed private functions in CI_URI to protected so MY_URI can override them.</li>
+			<li>Renamed router->_set_routing() to set_routing().  Aliased as _set_routing(), but this function will be removed in a subsequent version.</li>
+			<li>Renamed router->_set_overrides() to set_overrides().  Aliased as _set_overrides(), but this function will be removed in a subsequent version.</li>
+			<li>Renamed uri->_fetch_uri_string() to fetch_uri_string(). Aliased as _fetch_uri_string(), but this function will be removed in a subsequent version.</li>
 		</ul>
 	</li>
 </ul>
