More updates in the changelog for methods changed.

--- a/user_guide/changelog.html
+++ b/user_guide/changelog.html
@@ -104,6 +104,13 @@ Change Log
 			<li>Renamed router->_set_routing() to set_routing().  Aliased as _set_routing(), but this function will be removed in a subsequent version.</li>
 			<li>Renamed router->_set_overrides() to set_overrides().  Aliased as _set_overrides(), but this function will be removed in a subsequent version.</li>
 			<li>Renamed uri->_fetch_uri_string() to fetch_uri_string(). Aliased as _fetch_uri_string(), but this function will be removed in a subsequent version.</li>
+			<li>Renamed uri->_filter_uri() to filter_uri(). Aliased as _filter_uri(), but this function will be removed in a subsequent version.</li>
+			<li>Renamed uri->_remove_url_suffix() to remove_url_suffix(). Aliased as _remove_url_suffix(), but this function will be removed in a subsequent version.</li>
+			<li>Renamed uri->_explode_segments() to explode_segments(). Aliased as _explode_segments(), but this function will be removed in a subsequent version.</li>
+			<li>Renamed uri->_reindex_segments() to reindex_segments(). Aliased as _reindex_segments(), but this function will be removed in a subsequent version.</li>
+
+
+
 		</ul>
 	</li>
 </ul>
